--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -5,7 +5,7 @@
 adaptive_grasping:
   # The topic where the finger touches data is published
   touch_topic_name: "/touching_finger_topic"
-  # The following map contains the correspondance between ids and link names
+  # The following map contains the correspondence between ids and link names
   link_names_map:
     "1" : "right_hand_thumb_distal_link"
     "2" : "right_hand_index_distal_link"
@@ -27,39 +27,31 @@ adaptive_grasping:
     - [0, 0, 0, 1, 0, 0]
     - [0, 0, 0, 0, 1, 0]
     - [0, 0, 0, 0, 0, 1]
-  h_matrix_2:   # position constrained
-    - [1, 0, 0, 0, 0, 0]
-    - [0, 1, 0, 0, 0, 0]
-    - [0, 0, 1, 0, 0, 0]
-  # The following list of arrays is the minimization weight matrix A tilde
-  a_tilde_matrix:
-    - [100, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
-    - [0, 10, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
-    - [0, 0, 10, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
-    - [0, 0, 0, 10, 0, 0, 0, 0, 0, 0, 0, 0, 0]
-    - [0, 0, 0, 0, 10, 0, 0, 0, 0, 0, 0, 0, 0]
-    - [0, 0, 0, 0, 0, 10, 0, 0, 0, 0, 0, 0, 0]
-    - [0, 0, 0, 0, 0, 0, 10, 0, 0, 0, 0, 0, 0]
-    - [0, 0, 0, 0, 0, 0, 0, 10000, 0, 0, 0, 0, 0]
-    - [0, 0, 0, 0, 0, 0, 0, 0, 10000, 0, 0, 0, 0]
-    - [0, 0, 0, 0, 0, 0, 0, 0, 0, 10000, 0, 0, 0]
-    - [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10000, 0, 0]
-    - [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10000, 0]
-    - [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10000]
+  # The stiffness matrix for the contact forces
+  k_matrix:     # fully constrained
+    - [10, 0, 0, 0, 0, 0]
+    - [0, 10, 0, 0, 0, 0]
+    - [0, 0, 10, 0, 0, 0]
+    - [0, 0, 0, 10, 0, 0]
+    - [0, 0, 0, 0, 10, 0]
+    - [0, 0, 0, 0, 0, 10]
   # The following array is the desired x motion
   x_d:
-    # - [0.1, 0.001, 0, -0.001, 0, -0.005, 0, 0, 0, 0, 0, 0, 0]  # for going down with wrist
-    - [0.1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]                 # for simple grasp?
+    - [0.1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]                   # for simple grasp?
+    # - [0.1, 0.001, 0, -0.001, 0, -0.005, 0, 0, 0, 0, 0, 0, 0]   # for going down with wrist
     # - [0.1, 0.01, 0, -0.01, 0, -0.05, 0, 0, 0, 0, 0, 0, 0]      # for other fingers mainly?
     # - [0.1, 0, 0, -0.01, 0.05, 0, 0, 0, 0, 0, 0, 0, 0]          # for thumb mainly?
     # - [0.5, 0.00, 0, -0.05, 0, -0.09, 0, 0, 0, 0, 0, 0, 0]      # random stuff 1
     # - [0.5, 0.00, 0, -0.05, 0, 0.00, 0, 0, 0, 0, 0, 0, 0]       # random stuff 2
-  x_d_2:
-    - [0.0, 0.01, 0, -0.01, 0, -0.05, 0, 0, 0, 0, 0, 0, 0]      # for two finger contacts
+  # The following array is the desired contact force derivative
+  f_d_d:
+    - [ 0, 0, 0, 0, 0, 0]
   # The rate of the adaptive loop
   spin_rate: 1000.0
   # The topic where the object pose is published
   object_topic_name: "/object_pose"
+  # The topic where the current object twist is published
+  object_twist_topic_name: "/object_twist"
   # The scaling factor for the reference motion
   scaling: 1.0
   # The permutation vector for relaxed minimization (the elements of the vector stand for the reordering of the rows of Q) (CHANGE ALSO h_matrix ACCORDINGLY)
@@ -69,8 +61,6 @@ adaptive_grasping:
     # - [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 19, 17, 18, 16, 14, 15, 1]              # George Second order - NOT BAD for middle but thumb not still - 2 fingers ok
     # - [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 17, 18, 19, 15, 16, 14]              # Old order -
       - [2, 3, 4, 5, 6, 7, 19, 17, 18, 11, 12, 13, 8, 9, 10, 16, 14, 15, 1]              # For RP
-  p_vector_2:
-    - [2, 3, 1]                       # position constrained
   # The vector containing the indexes of the touch constraints
   touch_indexes:
     - [14, 15, 16, 17, 18, 19]
@@ -90,13 +80,5 @@ adaptive_grasping:
   lambda_max: 0.00001
   # The epsilon for the diagonal loading in singular value decomposition in RP Manager
   epsilon: 0.00001
-  # The stiffness matrix for the contact forces
-  k_matrix:     # fully constrained
-    - [10, 0, 0, 0, 0, 0]
-    - [0, 10, 0, 0, 0, 0]
-    - [0, 0, 10, 0, 0, 0]
-    - [0, 0, 0, 10, 0, 0]
-    - [0, 0, 0, 0, 10, 0]
-    - [0, 0, 0, 0, 0, 10]
 
 
