--- a/config/adaptive_params.yaml
+++ b/config/adaptive_params.yaml
@@ -37,12 +37,7 @@ adaptive_grasping:
     - [0, 0, 0, 0, 0, 10]
   # The following array is the desired x motion
   x_d:
-    - [0.1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]                   # for simple grasp?
-    # - [0.1, 0.001, 0, -0.001, 0, -0.005, 0, 0, 0, 0, 0, 0, 0]   # for going down with wrist
-    # - [0.1, 0.01, 0, -0.01, 0, -0.05, 0, 0, 0, 0, 0, 0, 0]      # for other fingers mainly?
-    # - [0.1, 0, 0, -0.01, 0.05, 0, 0, 0, 0, 0, 0, 0, 0]          # for thumb mainly?
-    # - [0.5, 0.00, 0, -0.05, 0, -0.09, 0, 0, 0, 0, 0, 0, 0]      # random stuff 1
-    # - [0.5, 0.00, 0, -0.05, 0, 0.00, 0, 0, 0, 0, 0, 0, 0]       # random stuff 2
+    - [0.1, 0, 0, 0, 0, 0, 0]                   # for simple grasp?
   # The following array is the desired contact force derivative
   f_d_d:
     - [ 0, 0, 0, 0, 0, 0]
@@ -56,14 +51,10 @@ adaptive_grasping:
   scaling: 1.0
   # The permutation vector for relaxed minimization (the elements of the vector stand for the reordering of the rows of Q) (CHANGE ALSO h_matrix ACCORDINGLY)
   p_vector:
-    # - [19, 17, 18, 5, 6, 7, 2, 3, 4, 16, 14, 15, 8, 9, 10, 11, 12, 13, 1]              # Giorgio order - OK 1 touch (only position), NOT OK more touches (strange)
-    # - [5, 6, 7, 2, 3, 4, 19, 17, 18, 16, 14, 15, 8, 9, 10, 11, 12, 13, 1]              # George First order - NOT BAD for middle but hand goes up for thumb
-    # - [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 19, 17, 18, 16, 14, 15, 1]              # George Second order - NOT BAD for middle but thumb not still - 2 fingers ok
-    # - [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 17, 18, 19, 15, 16, 14]              # Old order -
-      - [2, 3, 4, 5, 6, 7, 19, 17, 18, 11, 12, 13, 8, 9, 10, 16, 14, 15, 1]              # For RP
+      - [2, 3, 4, 5, 6, 7, 13, 11, 12, 10, 8, 9, 1]              # For RP
   # The vector containing the indexes of the touch constraints
   touch_indexes:
-    - [14, 15, 16, 17, 18, 19]
+    - [8, 9, 10, 11, 12, 13]
   # The threshold on the synergy joint value for stopping the grasping motion
   syn_thresh: 0.8
   # The bool to decide if null twist should be sent when relaxation occurs
@@ -71,11 +62,11 @@ adaptive_grasping:
   # The bool to decide if to change contact selection when touch occurs
   touch_change: true
   # The number of tasks for the RP Manger (Excluding contact tasks) (Contact Preserver) if num_tasks == 2 -> basic two tasks relaxation RP
-  num_tasks: 4
+  num_tasks: 3
   # The dimensions of the tasks for the RP Manger (Contact Preserver) (The last ones from the num_task_th element are the ones on touch)
-  dim_tasks: [1, 3, 3, 6, 2, 1, 2, 1]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH prio_tasks
+  dim_tasks: [1, 3, 3, 2, 1, 2, 1]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH prio_tasks
   # The priority of the above defined tasks (The last ones from the num_task_th element are the ones on touch)
-  prio_tasks: [6, 7, 8, 1, 2, 3, 5, 4]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
+  prio_tasks: [5, 4, 7, 1, 2, 4, 3]  # PLEASE DOUBLE CHECK THIS SO THAT IT COMPLIES WITH dim_tasks
   # The lambda max for the pseudo inversion in RP Manager
   lambda_max: 0.00001
   # The epsilon for the diagonal loading in singular value decomposition in RP Manager
